<!--
  ~ Copyright (c) 2016. Kaede
  -->

<resources>
    <string name="app_name">How Old You Look</string>
    <string name="app_label">HOW OLD</string>

    <string name="main_loading">Analysing Photo …</string>
    <string name="main_pick_camera_fail">Open camera fail</string>
    <string name="main_pick_gallery_fail">Pick photo fail</string>
    <string name="main_get_img_fail">Get image fail</string>
    <string name="main_analyze_fail">Analyze fail</string>
    <string name="main_analyze_no_face">Find no face</string>
    <string name="main_tv_camera">CAMERA</string>
    <string name="main_tv_gallery">GALLERY</string>
    <string name="main_tv_share">SHARE</string>
    <string name="main_introduce_first">①  pick a photo from camera or gallery</string>
    <string name="main_introduce_second">②  wait for analyse to get age and gender</string>
    <string name="main_introduce_third">③  don\'t forget to share with your peers</string>

    <string name="action_star">Five Star</string>
    <string name="action_web">Search Face</string>
    <string name="action_feedback">Feedback</string>

    <string name="share_fail">Can\'t find Share APP</string>
    <string name="share_select_title">Select APP</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
</resources>
