<!--
  ~ Copyright (c) 2016. Kaede
  -->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DDD"
    android:orientation="vertical"
    tools:context=".analyse.MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/layout_main_photo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/layout_main_bottom"
            android:layout_marginBottom="@dimen/margin_main_top"
            android:layout_marginLeft="@dimen/margin_main_left"
            android:layout_marginRight="@dimen/margin_main_left"
            android:layout_marginTop="@dimen/margin_main_top"
            android:background="@drawable/bg_rouned_white"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/layout_main_border"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >

                <me.kaede.howoldrobot.widget.FaceImageView
                    android:id="@+id/iv_main_face"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/border_main_photo"/>
            </LinearLayout>

        </LinearLayout>

        <me.kaede.howoldrobot.widget.AgeIndicatorLayout

            android:id="@+id/layout_main_age"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/layout_main_bottom"
            android:layout_marginBottom="@dimen/margin_main_top"
            android:layout_marginLeft="@dimen/margin_main_left"
            android:layout_marginRight="@dimen/margin_main_left"
            android:layout_marginTop="@dimen/margin_main_top"
            android:background="#00000000">

            <LinearLayout
                android:id="@+id/layout_main_introduce"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_main_introduce_logo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/border_main_photo"
                    android:src="@drawable/icon_how_old_02"/>

                <LinearLayout
                    android:id="@+id/layout_main_introduce_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:ellipsize="marquee"
                        android:singleLine="true"
                        android:text="@string/main_introduce_first"
                        android:textColor="@color/orange_500"
                        android:textSize="14sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:ellipsize="marquee"
                        android:singleLine="true"
                        android:text="@string/main_introduce_second"
                        android:textColor="@color/orange_500"
                        android:textSize="14sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:ellipsize="marquee"
                        android:singleLine="true"
                        android:text="@string/main_introduce_third"
                        android:textColor="@color/orange_500"
                        android:textSize="14sp"/>
                </LinearLayout>
            </LinearLayout>
        </me.kaede.howoldrobot.widget.AgeIndicatorLayout>

        <LinearLayout
            android:id="@+id/layout_main_bottom"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/margin_main_top"
            android:layout_marginLeft="@dimen/margin_main_left"
            android:layout_marginRight="@dimen/margin_main_left"
            android:background="@drawable/bg_rouned_white"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/btn_main_camera"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@drawable/selector_bg_button_round"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icon_camera"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:drawablePadding="10dp"
                    android:text="@string/main_tv_camera"
                    android:textColor="@android:color/white"
                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn_main_gallery"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@drawable/selector_bg_button_round"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icon_gallery"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:drawablePadding="10dp"
                    android:text="@string/main_tv_gallery"
                    android:textColor="@android:color/white"
                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn_main_share"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@drawable/selector_bg_button_round"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icon_share"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:drawablePadding="10dp"
                    android:text="@string/main_tv_share"
                    android:textColor="@android:color/white"
                    />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>


</LinearLayout>
